--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
 <body>
 	<div class="loading"></div>
 	<audio class="song" controls loop>
-        <source src="WhatsApp Audio 2024-06-20 at 10.22.11 PM.mp3"></source>
+        <source src="Ek-Din-Aap-Humko-Mil-Jayenge(PaglaSongs).mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#846205;">C</h2>
+    	<h2 style="color:#846205;">B</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">H</h2>
+    	<h2 style="color:#0719D4;">A</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">U</h2>
+    	<h2 style="color:#D14D39;">C</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#5b6d02;">T</h2>
+    	<h2 style="color:#5b6d02;">H</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">Y</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">A</h2>
     </div>
-    <div class="balloons text-center" id="b7">
+    <!-- <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;">A</h2>
-    </div>
+    </div> -->
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
@@ -110,30 +110,30 @@
 				<p>Happy birthday, baby.</p>
 				<p>I know it will sound super cheesy,</p>
 				<p>but seriously Sunnn,</p>
-				<p>YOU'RE THE BEST!!</p>
+				<p>YOU'RE THE BEST!!💖</p>
 				<p>Every moment with you feels like winning the lottery, yaar!</p>
 				<p><strong>IDK meko kaise sujha teko woh "pathvu ka ghari patrika" bolneka..</strong></p>
-				<p>But I'm glad I said it...</p>
+				<p>But I'm glad I said it..🤗</p>
 				<p>Else..</p>
 				 
-				<p>shayad he muje tere jaisa koi insaan (chutyaa) milta.</p>
+				<p>shayad he muje tere jaisa koi insaan (YEDAA) milta.</p>
 				<p>Definitely, that was the best decision i have made in my Life yet !!</p>
-				<p>Itni tareef sunkar jyada chane ke jhad pe chadne ki jarurat nahi hai..</p>
-				<p>I know...</p>
-				<p>Ki life kabhi kabhi perfect nahi hoti, </p>
+				<p>Itni tareef sunkar jyada chane ke jhad pe chadne ki jarurat nahi hai🥱..</p>
+				<p>I know..Ki life kabhi kabhi perfect nahi hoti,</p>
+				<p> </p>
 				<p>aur unexpected challenges ane wale hai, lekin....</p>
 				<p>muje woh sare tere saath face karne hai!!</p>
-				<p>Sare khushiyon ke pal ko tere saath milke jeena hai!!</p>
+				<p>Sare khushiyon ke pal ko tere saath milke jeena hai!!✨</p>
 				<p>I know I'm not perfect (Joking..ofc🥱)...</p>
 				<p>But itni guarantee jarur de sakta..</p>
 				<p>Ki Life ke har mod pe tere saath rahunga...</p>
 				<p>Sare chutyap tere sath karunga...</p>
 				<p>And I will be always there for you!!</p>
-				<p>Haa IK teko meri roast ki adat pasandh nahi hai...</p>
+				<!-- <p>Haa IK teko meri roast ki adat pasandh nahi hai...</p>
 				<p>But utna toh jhel he sakti...</p>
-				<p>Itna accha banda jo pata hai!!</p>
+				<p>Itna accha banda jo pata hai!!</p> -->
 				<p>Once again...</p>
-				<p>Happy Birthday Chutyaaa!!</p>
+				<p>Happy Birthday BABY!!</p>
 				<p>You're for sure the best thing happened to me.</p>
 				<p>RO mat ab..</p>
 				<p>Chalo tata bye bye...so jao ab😁</p>
@@ -174,5 +174,3 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="effect.js"></script>
 </html>
-
-
